kubernetes/docs/exposing/readiness-sample.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sayhello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sayhello
  template:
    metadata:
      name: sayhello-8080server
      labels:
        app: sayhello
    spec:
      containers:
      - name: hello-container
        image: "gcr.io/google-samples/hello-app:2.0"
        # args:
        # - /bin/bash
        # - -c
        # - echo
        # - "hello"
        ports:
        - name: readiness-port
          containerPort: 8080
          # hostPort: 8080
        readinessProbe:
          httpGet:
            path: /healthz
            port: readiness-port
            # httpHeaders:
            # - name: Custom-Header
            #   value: Awesome
          tcpSocket:
            port: readiness-port
          # exec:
          #   command:
          #   - cat
          #   - /tmp/healty
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 30
