kubernetes/docs/exposing/metadata-envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app":"metadata","app.kubernetes.io/component":"metadata","app.kubernetes.io/instance":"metadata-0.2.1","app.kubernetes.io/managed-by":"kfctl","app.kubernetes.io/name":"metadata","app.kubernetes.io/part-of":"kubeflow","app.kubernetes.io/version":"0.2.1","kustomize.component":"metadata"},"name":"metadata-envoy-service","namespace":"kubeflow"},"spec":{"ports":[{"name":"md-envoy","port":9090,"protocol":"TCP"}],"selecto [...]
  creationTimestamp: "2020-05-07T08:47:19Z"
  labels:
    app: metadata
    app.kubernetes.io/component: metadata
    app.kubernetes.io/instance: metadata-0.2.1
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: metadata
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.1
    kustomize.component: metadata
  name: metadata-envoy-service
  namespace: kubeflow
  resourceVersion: "2879"
  selfLink: /api/v1/namespaces/kubeflow/services/metadata-envoy-service
  uid: 5c59274b-903f-11ea-9ed9-42010a8a00fd
spec:
  clusterIP: 10.63.251.249
  ports:
  - name: md-envoy
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app.kubernetes.io/component: metadata
    app.kubernetes.io/instance: metadata-0.2.1
    app.kubernetes.io/managed-by: kfctl
    app.kubernetes.io/name: metadata
    app.kubernetes.io/part-of: kubeflow
    app.kubernetes.io/version: 0.2.1
    component: envoy
    kustomize.component: metadata
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
